syntax = "proto3";

package template_service;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ruko1202/balun.courses-microservice-6stream/pkg/templateservice/metriqa;metriqa";

service Service {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest{
  string ping = 1;
}

message PingResponse{
  string pong = 1;
  google.protobuf.Timestamp timestamp = 2;
}
